--- a/app/sass/_var.scss
+++ b/app/sass/_var.scss
@@ -1,7 +1,9 @@
-$robotoFontR: 'Roboto Regular', sans-serif;
-$robotoFontL: 'Roboto Light', sans-serif;
-$robotoFontM: 'Roboto Medium', sans-serif;
-$proximaNovaFont: 'Proxima Nova', sans-serif;
+$robotoFontR: 'RobotoRegular', sans-serif;
+$robotoFontL: 'RobotoLight', sans-serif;
+$robotoFontM: 'RobotoMedium', sans-serif;
+$proximaNovaFont: 'ProximaNovaR', sans-serif;
+$proximaNovaFontB: 'ProximaNovaB', sans-serif;
+$proximaNovaFontL: 'proxima_novalight', sans-serif;
 $rubikFont: 'Rubik', sans-serif;
 $bgBlue: linear-gradient(to top, #2022a2 0%, #445ae2 100%);
 $bgBtn: #ff6866;
