--- a/app/css/style.css
+++ b/app/css/style.css
@@ -482,6 +482,9 @@ a:focus {
   background-color: #ff6866;
   padding: 15px 22px;
   letter-spacing: .28px; }
+  .btn:hover {
+    -webkit-box-shadow: 0 9px 16px rgba(0, 0, 0, 0.48);
+            box-shadow: 0 9px 16px rgba(0, 0, 0, 0.48); }
 
 .link-watch_btn {
   margin-left: 10px;
@@ -731,10 +734,40 @@ a:focus {
   color: #3f3f3f;
   margin-bottom: 25px; }
 
-.services-items__wrap {
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap; }
+.services-items {
+  position: relative; }
+  .services-items:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -5px;
+    bottom: 0;
+    z-index: 2;
+    width: 10px;
+    background-color: #fff; }
+  .services-items:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    right: -5px;
+    z-index: 2;
+    width: 10px;
+    background-color: #fff; }
+  .services-items__wrap {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    position: relative; }
+    .services-items__wrap:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 1;
+      height: 10px;
+      background-color: #fff; }
 
 .services-box {
   width: 20%;
@@ -744,12 +777,8 @@ a:focus {
   .services-box__box {
     border-right: 1px solid #eaeaea;
     border-bottom: 1px solid #eaeaea;
-    min-height: 210px;
-    padding: 35px 12px 0; }
-  .services-box:nth-child(2n+2) .services-box__box {
-    border-bottom: none; }
-  .services-box:nth-child(n+9) .services-box__box {
-    border-right: none; }
+    min-height: 220px;
+    padding: 35px 12px 12px; }
 
 .service-box-img {
   min-height: 53px;
@@ -880,6 +909,8 @@ a:focus {
     font-family: "RobotoMedium", sans-serif;
     font-size: 14px;
     letter-spacing: 0.28px; }
+    .btn-wrap a:hover {
+      color: #ff6866; }
 
 .registration__wrap {
   max-width: 1030px; }
@@ -929,7 +960,9 @@ a:focus {
   .sprites-social__icon a {
     position: relative;
     width: 36px;
-    height: 36px; }
+    height: 36px;
+    -webkit-border-radius: 50%;
+            border-radius: 50%; }
     .sprites-social__icon a:before {
       content: "";
       position: absolute;
@@ -937,7 +970,12 @@ a:focus {
       left: 0;
       width: 36px;
       height: 36px;
+      -webkit-border-radius: 50%;
+              border-radius: 50%;
       background: url("../images/social.png") no-repeat; }
+    .sprites-social__icon a:hover {
+      -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.34);
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.34); }
   .sprites-social__icon + li a:before {
     background-position-x: -59px; }
   .sprites-social__icon + li + li a:before {
@@ -985,8 +1023,6 @@ footer {
             flex-wrap: wrap; }
     .digits-basic__wrap {
       width: 18%; }
-  .services-box__box {
-    min-height: 225px; }
   .service-box-heading {
     line-height: 22px;
     margin-top: 5px;
@@ -1201,10 +1237,6 @@ footer {
       .digits-basic__wrap:last-child {
         margin-left: 0;
         margin-top: 20px; }
-  .services-box:nth-child(n+9) .services-box__box {
-    border-left: 1px solid #eaeaea; }
-  .services-box:nth-child(n+7) .services-box__box {
-    border-right: none; }
   .price-main-wrap {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
@@ -1305,10 +1337,6 @@ footer {
     .digits-basic__wrap:last-child {
       margin-top: 0;
       margin-bottom: 0; }
-  .services-box:nth-child(n+7) .services-box__box {
-    border-left: 1px solid #eaeaea; }
-  .services-box:nth-child(n+5) .services-box__box {
-    border-right: none; }
   .service-box-heading {
     font-size: 15px;
     line-height: 18px; }
@@ -1442,20 +1470,6 @@ footer {
       width: 49%; }
   .services {
     padding: 40px 0 40px; }
-  .services-box:nth-child(n+5) .services-box__box {
-    border-left: 1px solid #eaeaea; }
-  .services-box:nth-child(n+3) .services-box__box {
-    border-right: none; }
-  .services-box:nth-child(5) .services-box__box {
-    border-left: none;
-    border-right: 1px solid #eaeaea; }
-  .services-box:nth-child(6) .services-box__box {
-    border-left: none;
-    border-right: 1px solid #eaeaea; }
-  .services-box:nth-child(7) .services-box__box {
-    border-left: none; }
-  .services-box:nth-child(8) .services-box__box {
-    border-left: none; }
   .services-heading {
     margin-bottom: 10px; }
   .service-box-heading {
